--- a/MyFace/MyFace.csproj
+++ b/MyFace/MyFace.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.0" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.0-rc.2.21480.5" />
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.0-rc.2.21480.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1" />
     </ItemGroup>
